# bot

./: .gitignore  Anchor.toml  Cargo.toml  all_project_files1.txt  arbitrage-bo2t.txt  arbitrage-bot (09.11).txt  arbitrage-bot-rust.txt  arbitrage-bot.txt  config.toml
bot/: .env.tokens  Cargo.toml
bot/src/: check-ata.js  config.rs  devnet_pools.rs  dex_structs.rs  main.rs  types.rs
bot/src/arbitrage/: bellman_ford.rs  graph.rs  mod.rs  opportunity.rs  pool_math.rs  profit_calculator.rs
bot/src/executor/: jito_client.rs  mod.rs  simulator.rs  transaction_builder.rs
bot/src/scanner/: meteora_dlmm.rs  mod.rs  pool_monitor.rs  raydium_amm.rs  raydium_clmm.rs  raydium_cpmm.rs
bot/src/utils/: math.rs  mod.rs  rpc.rs
programs/arbitrage-executor/: Cargo.toml  Xargo.toml
programs/arbitrage-executor/src/: lib.rs
