[workspace]
members = [
    "programs/arbitrage-executor",
    "bot",
]
resolver = "2"

[workspace.dependencies]
# Современные версии для nightly Rust
solana-sdk = "2.3.0"
solana-client = "2.3.0"
solana-program = "2.3.0"
solana-account-decoder = "2.3.0"
solana-transaction-status = "2.3.0"
solana-system-interface = "2.0.0"
solana-program-pack = "2.2.1"

anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
anchor-client = "0.31.0"

# --- ОБНОВЛЕННЫЕ ВЕРСИИ ---
borsh = "1.5.1"
spl-token = "6.0.0"
spl-associated-token-account = "6.0.0"

# --- РАСКОММЕНТИРОВАННЫЕ ЗАВИСИМОСТИ БОТА ---
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
bs58 = "0.5"
rayon = "1.10"
dashmap = "5.5"
chrono = "0.4"
shellexpand = "3.1"
once_cell = "1.21.3"
lru = "0.12"
futures = "0.3"
async-trait = "0.1"
bytemuck = { version = "1.14", features = ["derive"] }



[profile.release]
overflow-checks = true