# programs/arbitrage-executor/Cargo.toml
[package]
name = "arbitrage-executor"
version = "0.1.0"
description = "Solana Arbitrage Executor Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arbitrage_executor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
custom-heap = []
custom-panic = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

